<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm3dof</name>
  <version>0.0.1</version>
  <description>3-DOF robot-arm demo controller</description>

  <maintainer email="yeterb24@itu.edu.tr">deniz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <!-- optional, if you talk to ros2_control -->
  <!-- <depend>ros2_control</depend>
       <depend>ros2_controllers</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
